--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 	position: absolute;
 	top: 0;
 	bottom: 0;
-	width: calc((100% - 1200px) / 2);
+	/* width: calc((100% - 1200px) / 2); */
 	background-color: #fafafa;
 	border: 1px solid #f4f4f5;
 }
@@ -44,8 +44,10 @@
 }
 
 .content-wrapper {
-	max-width: 1000px;
+	/* max-width: 1000px; */
 	margin: 0 auto;
+	padding-left: 100px;
+	padding-right: 100px;
 }
 
 .title {
