--- a/src/components/projects/styles/project.css
+++ b/src/components/projects/styles/project.css
@@ -93,9 +93,9 @@
 }
 
 
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
 	.project {
 		height: 210px;
-		padding-bottom: 20px;
+
 	}
-}
+} */
